--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,8 @@
             <li><a class="nav-link scrollto" href="./about.html">About</a></li>
             <li><a class="nav-link scrollto" href="./services.html">Services</a></li>
             <li><a class="nav-link scrollto" href="./contact.html">Contact</a></li>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+          <li><a class="nav-link scrollto" href="./login.html">Login</a></li>
+          <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
     </div>
