--- a/services.html
+++ b/services.html
@@ -45,6 +45,7 @@
             <li><a class="nav-link scrollto" href="./about.html">About</a></li>
             <li><a class="nav-link scrollto" href="./services.html">Services</a></li>
             <li><a class="nav-link scrollto" href="./contact.html">Contact</a></li>
+            <li><a class="nav-link scrollto" href="./login.html">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
