--- a/about.html
+++ b/about.html
@@ -240,6 +240,7 @@
   </div>
   
     <!-- ======= Team Section ======= -->
+   <!-- ======= Team Section ======= -->
     <section id="team" class="team">
 
       <div class="container" data-aos="fade-up">
@@ -254,7 +255,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team.png" class="img-fluid" alt="">
+                <img src="assets/img/team.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -263,9 +264,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>krishna Shahu</h4>
+                <h4>Shreya Singh</h4>
                 <span>Chief Executive Officer</span>
-                <p>Velit aut quia fugit et et. Dolorum ea voluptate vel tempore tenetur ipsa quae aut. Ipsum exercitationem iure minima enim corporis et voluptate.</p>
+                <p>With a passion for innovation and a relentless drive for success, Shreya leads our team towards achieving our goals.  She is committed to delivering excellence to our clients.</p>
               </div>
             </div>
           </div>
@@ -273,7 +274,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team.png" class="img-fluid" alt="">
+                <img src="assets/img/team.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -282,9 +283,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Karan Patel</h4>
+                <h4>Harshit Kushwaha</h4>
                 <span>Product Manager</span>
-                <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
+                <p>He is an accomplished Product Manager with a keen eye for detail and a passion for delivering exceptional products. He inspires every member of our company to contribute their best.</p>
               </div>
             </div>
           </div>
@@ -292,7 +293,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team.png" class="img-fluid" alt="">
+                <img src="assets/img/team.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -301,9 +302,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Srinath Reddy</h4>
+                <h4>Rashi Singh</h4>
                 <span>CTO</span>
-                <p>Vero omnis enim consequatur. Voluptas consectetur unde qui molestiae deserunt. Voluptates enim aut architecto porro aspernatur molestiae modi.</p>
+                <p>With a deep understanding of technology and a strategic mindset, Rashi leads our technical team in driving innovation and ensuring the successful implementation of cutting-edge solutions.</p>
               </div>
             </div>
           </div>
@@ -311,7 +312,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team.png" class="img-fluid" alt="">
+                <img src="assets/img/team.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -320,9 +321,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sumit Rajbanshi</h4>
+                <h4>Riya Roy</h4>
                 <span>Accountant</span>
-                <p>Rerum voluptate non adipisci animi distinctio et deserunt amet voluptas. Quia aut aliquid doloremque ut possimus ipsum officia.</p>
+                <p>With meticulous attention to detail and a strong understanding of financial management, Riya diligently handles financial transactions, and provides valuable insights to support informed decision-making.</p>
               </div>
             </div>
           </div>
